fix gap between elements

--- a/services/ui-src/src/styles/index.scss
+++ b/services/ui-src/src/styles/index.scss
@@ -144,3 +144,7 @@ button {
     font-size: 16px;
   }
 }
+
+.ds-c-field {
+  margin: 8px 0 0 0;
+}
